# stmatrix2

./: CMakeLists.txt
device/: STM32G474RETx_FLASH.ld
inc/: FreeRTOSConfig.h  stm32g4xx_it.h
src/: main.c  stm32g4xx_it.c  stm32g4xx_it.h
